# End-To-End-ML_Project-Azure-Deployment

./: .dockerignore  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: main.yml  main_mathscoreprediction.yml
Notebook/: EDA.ipynb  Model Training.ipynb
data storage/: preprocessor.pkl
src/: exception.py  utils.py
src/components/: config_entity.py  data_ingestion.py  data_transformation.py  hyperparameters.py  model_trainer.py
src/pipeline/: prediction_pipeline.py
