[tool.poetry]
name = "src"
version = "0.1.0"
description = "End to end ml project 1"
authors = ["Darshan <darshan9d9@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "2.2.3"
numpy = "1.26.4"
catboost = "1.2.7"
xgboost = "2.1.1"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
dill = "^0.3.9"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"
enum34 = "^1.1.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
